
(rule
 (targets coq-pkgs)
 (deps
  (package coq-htt))
 (action
  (run npx %{env:pkgtool=jscoq} build workdir/theories --top htt
                   --load ../mathcomp/coq-pkgs/mathcomp-ssreflect.coq-pkg
                   --load ../fcsl-pcm/coq-pkgs/fcsl-pcm.coq-pkg
                   --package coq-pkgs/htt.coq-pkg)))

(alias
 (name all)
 (deps package.json))

(dirs workdir)
